--- a/Project/Client/Views/Admin/UsersManager.cshtml
+++ b/Project/Client/Views/Admin/UsersManager.cshtml
@@ -47,9 +47,9 @@
 <div class="container mt-4">
 	<!-- Thanh tìm kiếm và nút Thêm -->
 	<div class="d-flex justify-content-between mb-3">
-		<div class="col-md-4">
+		<form asp-action="" class="col-md-4">
 			<input class="form-control" type="text" placeholder="Search by..." />
-		</div>
+		</form>
 		<div class="w-100">
 			<div class="text-end">
 				<span class="dropdown">
